samples/_failures_safe/1761445326_9a0fdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_520e788d.c: In function ‘main’:
./samples/SAFE/__tmp_520e788d.c:147:5: error: expected expression at end of input
  147 |     if (compressed_size ==
      |     ^~
./samples/SAFE/__tmp_520e788d.c:147:5: error: expected declaration or statement at end of input
